--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <li><a class="link" href="">Студия</a></li>
     <li><a class="link" href="">Портфолио</a></li>
     <li><a class="link" href="">Контакты</a></li>
+
 </ul>
 </nav>
 <ul class="auth-nav">
@@ -33,33 +34,34 @@
 <main>
     <section class="page-main">
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button class="button">Заказать услугу</button>
     </section>
     <section class="title">
         <h2></h2>
+
         <div>
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="titles">Внимание к деталям</h3>
+                    <p class="lead" >Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="titles">Пунктуальность</h3>
+                    <p class="lead">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="titles">Планирование</h3>
+                    <p class="lead">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="titles">Современные технологии</h3>
+                    <p class="lead">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </div>
     </section>
     <section class="subtitle">
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="subtitles">Чем мы занимаемся</h2>
         <ul class="img">
             <li><img src="./img/about-1.jpg" alt="вертка" width="370" height="294"></li>
             <li><img src="./img/about-2.jpg" alt="разработка мобильных приложений" width="370" height="294"></li>
@@ -67,22 +69,22 @@
         </ul>
     </section>
     <section class="subject">
-        <h2>Наша команда</h2>
+        <h2 class="subjects">Наша команда</h2>
         <div>
         <ul>
             <li><img src="./img/about-img-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-              <h3>Игорь Демьяненко</h3>
+              <h3 class="name" >Игорь Демьяненко</h3>
               <p class="text" lang="en">Product Designer</p>
             </li>
             <li><img src="./img/about-img-2.jpg" alt="Ольга Репина" width="270" height="260">
-              <h3>Ольга Репина</h3>
+              <h3 class="name">Ольга Репина</h3>
               <p class="text" lang="en">Frontend Developer</p>
             </li><li><img src="./img/about-img-3.jpg" alt="Николай Тарасов" width="270" height="260">
-                <h3>Николай Тарасов</h3>
+                <h3 class="name">Николай Тарасов</h3>
                 <p class="text" lang="en">Marketing</p>
             </li>
             <li><img src="./img/about-img-4.jpg" alt="Михаил Ермаков" width="270" height="260">
-                <h3>Михаил Ермаков</h3>
+                <h3 class="name">Михаил Ермаков</h3>
                 <p class="text" lang="en">UI Designer</p>
             </li>
             
@@ -94,9 +96,9 @@
     <a class="logo-link" href="index.html" lang="en">Web<span class="logo-adress">Studio</span></a>
     <address class="links">
         <ul class="list">
-            <li><a href="https://goo.gl/maps/2vZ6cMErP4aZyP5X6">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tell:+380991111111">+38 099 111 11 11</a></li>
+            <li><a class="gps" href="https://goo.gl/maps/2vZ6cMErP4aZyP5X6">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a class="mails" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="tells" href="tell:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
 </footer>
